// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should auto play when only list props 1`] = `
<div
  class="van-barrage"
  style="--move-distance: -100px;"
>
  <div
    class="video"
    style="width: 100%; height: 150px;"
  >
  </div>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 0ms; animation-name: van-barrage; animation-timing-function: linear; top: 10px;"
    data-id="100"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 300ms; animation-name: van-barrage; animation-timing-function: linear; top: 110px;"
    data-id="101"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 600ms; animation-name: van-barrage; animation-timing-function: linear; top: 210px;"
    data-id="102"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 900ms; animation-name: van-barrage; animation-timing-function: linear; top: 310px;"
    data-id="103"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1200ms; animation-name: van-barrage; animation-timing-function: linear; top: 10px;"
    data-id="104"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1500ms; animation-name: van-barrage; animation-timing-function: linear; top: 110px;"
    data-id="105"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1800ms; animation-name: van-barrage; animation-timing-function: linear; top: 210px;"
    data-id="106"
  >
  </span>
</div>
`;

exports[`should emit "update:modelValue" when animationend 1`] = `
<div
  class="van-barrage"
  style="--move-distance: -100px;"
>
  <div
    class="video"
    style="width: 100%; height: 150px;"
  >
  </div>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 0ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 10px;"
    data-id="100"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 300ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 110px;"
    data-id="101"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 600ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 210px;"
    data-id="102"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 900ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 310px;"
    data-id="103"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1200ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 10px;"
    data-id="104"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1500ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 110px;"
    data-id="105"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1800ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 210px;"
    data-id="106"
  >
  </span>
</div>
`;

exports[`should not auto play use play function when use play function 1`] = `
<div
  class="van-barrage"
  style="--move-distance: -100px;"
>
  <div
    class="video"
    style="width: 100%; height: 150px;"
  >
  </div>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 0ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 10px;"
    data-id="100"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 300ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 110px;"
    data-id="101"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 600ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 210px;"
    data-id="102"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 900ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 310px;"
    data-id="103"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1200ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 10px;"
    data-id="104"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1500ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 110px;"
    data-id="105"
  >
  </span>
  <span
    class="van-barrage__item"
    style="animation-duration: 4000ms; animation-delay: 1800ms; animation-name: van-barrage; animation-timing-function: linear; animation-play-state: paused; top: 210px;"
    data-id="106"
  >
  </span>
</div>
`;
